pushed up Summer's work

--- a/geodex/website/labs/graph.html
+++ b/geodex/website/labs/graph.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../img/favicon.png">
 
-  <script type="module" src="/js/csdcoSearchBeta.js"></script>
+  <script type="module" src="./graph.js"></script>
 
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/simple-grid.css">
@@ -106,14 +106,15 @@
 
     <div style="padding:0px;top:0px" class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-10">
           <div id="container2"></div>
+        </div>
+        <div class="col-2">
+          <div id="sidebar">Side bar for provider results</div>
         </div>
       </div>
     </div>
-
   </div>
-
 
   <footer style="padding-bottom:5px;background-image: linear-gradient(#7391ff, #625354);">
     <div class="container">
