--- a/geodex/website/search.html
+++ b/geodex/website/search.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../img/favicon.png">
 
-  <script type="module" src="/js/csdcoSearchBeta.js"></script>
+  <script type="module" src="/js/geodex.js"></script>
 
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/simple-grid.css">
