--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -2,27 +2,91 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet" />
-    <link href="./css/landing.css" rel="stylesheet" />
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"/>
+
+    <title>Earthcube</title>
+
+    <link rel="stylesheet" href="./css/spacelab/bootstrap.css"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="v292_76">
-        <div class="v292_77"></div>
-        <div class="v292_78"></div>
-        <div class="v292_113"></div><span class="v292_114">EarthCube</span>
-        <div class="v292_116"></div><span class="v292_117">SPARQL Endpoint</span><span class="v292_119">Help</span>
-        <div class="v292_80"></div>
-        <div class="v292_81"></div><span class="v292_82">Search Text Here</span>
-        <div class="v292_83"></div>
-        <div class="v292_84">
-            <div class="v292_85"></div>
-        </div><span class="v292_104">All</span>
-        <div class="v292_105"></div><span class="v292_107">Tool</span>
-        <div class="v292_108"></div><span class="v292_110">Data</span>
-        <div class="v292_111"></div>
+<div class="container-fluid" >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="https://www.earthcube.org/">
+            <img src="https://www.earthcube.org/sites/default/files/earthcubeicon.png" width="30" height="30"
+                 class="d-inline-block align-top" alt="" loading="lazy">
+            EarthCube
+        </a>
+        <!-- -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <!--                <li class="nav-item active">-->
+                <!--                    <a class="nav-link" href="#">EarthCube <span class="sr-only">(current)</span></a>-->
+                <!--                </li>-->
+                <li class="nav-item">
+                    <a class="nav-link" href="#">SPARQL Endpoint</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Help</a>
+                </li>
+            </ul>
+            <!--            <form class="form-inline my-2 my-lg-0">-->
+            <!--                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+            <!--                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+            <!--            </form>-->
+        </div>
+    </nav>
+
+    <div class="row  mb-3  mt-3">
+        <div class="col-2"></div>
+        <div class="col-4 d-flex justify-content-center">
+            <img src="images/v292_71.png"/>
+        </div>
+
     </div>
+
+    <form>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="input-group mb-3 col-6 d-flex justify-content-center">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <div class="input-group-append">
+                    <a href="#" class="btn btn-default col-2"><img src="../../geodex/website/img/icons/search.svg" alt="" width="32"
+                                                                   height="32" title="Search"></span> </a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="input-group mb-3 col-6 d-flex justify-content-center">
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" id="all" name="customRadioInline1" class="custom-control-input">
+                    <label class="custom-control-label" for="all">All</label>
+                </div>
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" id="tool" name="customRadioInline1" class="custom-control-input">
+                    <label class="custom-control-label" for="tool">Tool</label>
+                </div>
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" id="data" name="customRadioInline1" class="custom-control-input">
+                    <label class="custom-control-label" for="data">data</label>
+                </div>
+            </div>
+        </div>
+        <div class="v292_111"></div>
+    </form>
+</div>
 </body>
 
 </html>
