--- a/gleaner/website/index.html
+++ b/gleaner/website/index.html
@@ -13,6 +13,8 @@
 
   <script type="module" src="/js/components/obj-exchange.js"></script>
   <script type="module" src="/js/components/demo-tp.js"></script>
+  <script type="module" src="/js/components/eco-sparql.js"></script>
+
 
 </head>
 
@@ -100,7 +102,8 @@
           <!-- <div class="img img-simple center"></div> -->
           <h3>Compatible tools</h3>
           <p>
-            Web component to query graph for associated tools for this dataset and data type. 
+            Alpha SPARQL to Resource Registry
+            <eco-sparql></eco-sparql>
           </p>
         </div>
       </div>
