--- a/geodex/website/search.html
+++ b/geodex/website/search.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../img/favicon.png">
 
-  <script type="module" src="/js/geodex.js"></script>
+  <script type="module" type="text/javascript" src="js/geodex.js"></script>
 
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/simple-grid.css">
-  <link rel="stylesheet" href="/css/zc-grid.css">
-  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/simple-grid.css">
+  <link rel="stylesheet" type="text/css" href="css/zc-grid.css">
+  <link rel="stylesheet" type="text/css" href="css/card.css">
 
 </head>
 
@@ -21,10 +21,10 @@
     <div class="container">
       <div class="row">
         <div class="col-12 center">
-          <img src="/img/location2.svg">
+          <img src="img/location2.svg">
           <h3 style="margin:5px;color:white">geodex</h3>
           <h3 style="margin:5px;color:white" class="font-light">a schema.org/Dataset search</h3>
-            <!-- 
+            <!--
           <div class="img img-logo center"></div>
           <h1>Simple Grid is a CSS grid for your website.</h1>
           <h2 class="font-light">Responsive, light, simple.</h2>
@@ -38,9 +38,9 @@
       <div class="row">
         <div class="col-12 center">
           <p>
-            <a style="margin:5px;color:white "href="/index.html">home</a>
-            <a style="margin:5px;color:white "href="/search.html">search</a>
-            <a style="margin:5px;color:white "href="/about.html">about</a>
+            <a style="margin:5px;color:white "href="index.html">home</a>
+            <a style="margin:5px;color:white "href="search.html">search</a>
+            <a style="margin:5px;color:white "href="about.html">about</a>
           </p>
         </div>
       </div>
@@ -77,7 +77,7 @@
       <div slot="header">
         Header Title
       </div>
-    
+
       This card has a header. You can put all sorts of things in it!
     </sl-card> -->
 
