some work related to the tool match demo

--- a/geodex/website/alphasearch.html
+++ b/geodex/website/alphasearch.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>GeoDex: JS-SPARQL search</title>
   <meta charset="utf-8">
@@ -9,18 +8,16 @@
 
   <!-- <script type="module">
     import {html, render} from '/js/lit-html.js';
-   
   </script>
   <script data-main="/js/geodexv2/main" src="/js/require.js"></script> -->
 
-  <script type="module" src="/js/geodexv2/main.js"></script>
 
+  <script type="module" src="/js/geodexv2/main.js"></script>
 
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/simple-grid.css">
   <link rel="stylesheet" href="/css/zc-grid.css">
   <link rel="stylesheet" href="/css/card.css">
-
 </head>
 
 <body>
@@ -57,7 +54,6 @@
       </div>
     </div>
   </div>
-
 
   <div class="body-content" style="padding:0px">
 
@@ -113,12 +109,12 @@
 
       <div style="padding:0px;top:0px" class="container">
         <div class="row">
-          <div class="col-8">
+          <div class="col-12">
             <div id="container2"></div>
           </div>
-          <div class="col-4">
+          <!-- <div class="col-4">
             <div id="container2">Tool Match Results Here</div>
-          </div>
+          </div> -->
         </div>
       </div>
 
